test/message/fail/brace-after-function-body.out
*%(basename)s:6: SyntaxError: missing '}' after function body.
  var x = 1;
           ^
SyntaxError: missing '}' after function body.